# memo

./: AGENTS.md  Cargo.toml  IMPLEMENTATION_SUMMARY.md  PLAN.md  README.md  REFACTORING_SUMMARY.md  TESTS.md  TEST_REFERENCE.md  TODO.md  build.rs  channels.scm  guix.scm  manifest.scm
.github/workflows/: ci.yml  release.yml
src/: cache.rs  constants.rs  digest.rs  error.rs  executor.rs  main.rs  memo.rs
tests/: integration_test.rs
